--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,38 @@
-.App {
-    text-align: center;
-}
-
 // Components
 
-.post-card {
-    margin: 1rem;
+.app-wrapper {
+    margin-bottom: 5rem;
 }
 
+.post-card {
+    margin: .75rem;
+}
+
+// Top navigation
+
+.topbar-nav-link {
+    padding: .5rem;
+    color: firebrick;
+}
+
+// Bottom modal button
+
 .bottom-bar {
-    margin-bottom: 2rem;
+    backdrop-filter: brightness(80%);
+    padding: 1rem 1rem 1rem 1rem !important;
+    border-radius: 5px 5px 0 0;
 }
 
 // Bootstrap overrides
 
+.card {
+    border: 0 !important;
+}
+
 .navbar-expand {
     justify-content: center !important;
+}
+
+.modal {
+    backdrop-filter: blur(3px);
 }
