--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 
 .topbar-nav-link {
     padding: .5rem;
-    color: firebrick;
+    color: #dc3545;
 }
 
 // Bottom modal button
@@ -20,7 +20,6 @@
 .bottom-bar {
     backdrop-filter: brightness(80%);
     padding: 1rem 1rem 1rem 1rem !important;
-    border-radius: 5px 5px 0 0;
 }
 
 // Bootstrap overrides
