--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,12 @@
     padding: 0.375rem 4rem !important;
 }
 
+// About page
+
+.about-card {
+    margin: 0.75rem;
+}
+
 // Bootstrap overrides
 
 .card {
