--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,13 @@
 
 .card {
     border: 0 !important;
-    border-radius: 0 !important;
+    border-radius: 1rem !important;
+    box-shadow: 0px 0px 10px 3px rgba(50, 50, 50, 0.15);
+
+    .card-header {
+        border-bottom: 0;
+        border-radius: 1rem 1rem 0 0 !important;
+    }
 }
 
 .navbar-expand {
